--- a/src/MarvelFlow/MarvelFlow.Classes/MarvelFlow.Classes.csproj
+++ b/src/MarvelFlow/MarvelFlow.Classes/MarvelFlow.Classes.csproj
@@ -43,7 +43,9 @@
     <Compile Include="Hero.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serie.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="Video.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
