default class attributes

--- a/src/MarvelFlow/MarvelFlow.Classes/MarvelFlow.Classes.csproj
+++ b/src/MarvelFlow/MarvelFlow.Classes/MarvelFlow.Classes.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Reponse.cs" />
+    <Compile Include="Commentaire.cs" />
     <Compile Include="Hero.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
