--- a/src/MarvelFlow/MarvelFlow.Service/MarvelFlow.Service.csproj
+++ b/src/MarvelFlow/MarvelFlow.Service/MarvelFlow.Service.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MarvelFlow.Service</RootNamespace>
     <AssemblyName>MarvelFlow.Service</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,6 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\HeroJson.cs" />
+    <Compile Include="Data\MovieJson.cs" />
+    <Compile Include="Factory\HeroFactory.cs" />
+    <Compile Include="Factory\MovieFactory.cs" />
     <Compile Include="ManagerJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -58,5 +63,6 @@
       <Name>MarvelFlow.Classes</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
