--- a/src/MarvelFlow/MarvelFlow.App/App.config
+++ b/src/MarvelFlow/MarvelFlow.App/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="jsonPathHero" value="C:\\Users\\AM\\Documents\\GIT\\marvelflow\\src\\MarvelFlow\\MarvelFlow.Service\\DBLocal\\Hero.json" />
-    <add key="jsonPathMovie" value="C:\\Users\\AM\\Documents\\GIT\\marvelflow\\src\\MarvelFlow\\MarvelFlow.Service\\DBLocal\\Movie.json" />
+    <add key="jsonPathMovie" value="C:\\Users\\AM\\Documents\\GIT\\marvelflow\\src\\MarvelFlow\\MarvelFlow.Service\\DBLocal\\Film.json" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
