--- a/src/MarvelFlow/MarvelFlow.Classes/MarvelFlow.Classes.csproj
+++ b/src/MarvelFlow/MarvelFlow.Classes/MarvelFlow.Classes.csproj
@@ -40,8 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lib\Enums.cs" />
+    <Compile Include="Film.cs" />
     <Compile Include="Hero.cs" />
+    <Compile Include="Episode.cs" />
+    <Compile Include="Lib\SerieException.cs" />
+    <Compile Include="Lib\SeasonException.cs" />
+    <Compile Include="Season.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serie.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Movie.cs" />
   </ItemGroup>
