--- a/src/MarvelFlow/MarvelFlow.App/MarvelFlow.App.csproj
+++ b/src/MarvelFlow/MarvelFlow.App/MarvelFlow.App.csproj
@@ -228,13 +228,30 @@
     <Resource Include="Images\ImagesHero\hulk.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\ImagesMovie\AntMan.jpg" />
     <Resource Include="Images\ImagesMovie\Avengers1.jpg" />
     <Resource Include="Images\ImagesMovie\Avengers3.jpg" />
     <Resource Include="Images\ImagesMovie\IronMan.jpg" />
     <Resource Include="Images\ImagesMovie\IronMan2.jpg" />
     <Resource Include="Images\ImagesMovie\IronMan3.jpg" />
     <Resource Include="Images\ImagesMovie\Thor3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\ImagesMovie\Antman.jpg" />
+    <Resource Include="Images\ImagesMovie\AntMan2.jpg" />
+    <Resource Include="Images\ImagesMovie\BlackPanther.jpg" />
+    <Resource Include="Images\ImagesMovie\CaptainAmerica1.jpg" />
+    <Resource Include="Images\ImagesMovie\CaptainAmerica2.jpg" />
+    <Resource Include="Images\ImagesMovie\CaptainAmerica3.jpg" />
+    <Resource Include="Images\ImagesMovie\DoctorStrange.jpg" />
+    <Resource Include="Images\ImagesMovie\guardienGalaxy.jpg" />
+    <Resource Include="Images\ImagesMovie\guardienGalaxy2.jpg" />
+    <Resource Include="Images\ImagesMovie\hulk1.jpg" />
+    <Resource Include="Images\ImagesMovie\spidermanHomecoming.jpg" />
+    <Resource Include="Images\ImagesMovie\Thor1.jpg" />
+    <Resource Include="Images\ImagesMovie\thor2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\ImagesMovie\Avengers2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
