Retour + combobox + radiobutton

--- a/src/MarvelFlow/MarvelFlow.App/MarvelFlow.App.csproj
+++ b/src/MarvelFlow/MarvelFlow.App/MarvelFlow.App.csproj
@@ -237,6 +237,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\ImagesMovie\Antman.jpg" />
+    <Resource Include="Images\row.png" />
     <Resource Include="Images\ImagesMovie\AntMan2.jpg" />
     <Resource Include="Images\ImagesMovie\BlackPanther.jpg" />
     <Resource Include="Images\ImagesMovie\CaptainAmerica1.jpg" />
