Refactoring history, navigation,correct binding, list view changes to actually show the hero

--- a/src/MarvelFlow/MarvelFlow.App/MarvelFlow.App.csproj
+++ b/src/MarvelFlow/MarvelFlow.App/MarvelFlow.App.csproj
@@ -72,6 +72,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Lib\HistoryObject.cs" />
     <Compile Include="Lib\Messages\ListMovieMessage.cs" />
     <Compile Include="Lib\Messages\MovieMessage.cs" />
     <Compile Include="Lib\Messages\ProfileMessage.cs" />
