--- a/src/MarvelFlow/MarvelFlow.App/App.config
+++ b/src/MarvelFlow/MarvelFlow.App/App.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="jsonPathHero" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Hero.json" />
-    <add key="jsonPathFilm" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
-    <add key="jsonPathSerie" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
+    <add key="jsonPathHero" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Hero.json" />
+    <add key="jsonPathFilm" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
+    <add key="jsonPathSerie" value="C:\Users\lbell\Desktop\DEVELOPEMENT\C#\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
     <add key="AffichePath" value="pack://application:,,,/MarvelFlow.App;component/Images/" />
+    <add key="TeaserPath" value="pack://application:,,,/MarvelFlow.App;component/Component/Teaser/" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
