--- a/src/MarvelFlow/MarvelFlow.Test/MarvelFlow.Test.csproj
+++ b/src/MarvelFlow/MarvelFlow.Test/MarvelFlow.Test.csproj
@@ -54,6 +54,20 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MarvelFlow.App\MarvelFlow.App.csproj">
+      <Project>{8c7ce4b0-cf3c-46ba-a45b-636660314d74}</Project>
+      <Name>MarvelFlow.App</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MarvelFlow.Classes\MarvelFlow.Classes.csproj">
+      <Project>{7d5a9ff3-e584-4f7f-8e25-e8011ada1de5}</Project>
+      <Name>MarvelFlow.Classes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MarvelFlow.Service\MarvelFlow.Service.csproj">
+      <Project>{3858f0aa-486e-4d21-a4f8-808202b24be6}</Project>
+      <Name>MarvelFlow.Service</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
