--- a/src/MarvelFlow/MarvelFlow.App/App.config
+++ b/src/MarvelFlow/MarvelFlow.App/App.config
@@ -5,7 +5,7 @@
     <add key="jsonPathFilm" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Film.json" />
     <add key="jsonPathSerie" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.Service\DBLocal\Serie.json" />
     <add key="AffichePath" value="pack://application:,,,/MarvelFlow.App;component/Images/" />
-    <add key="TeaserPath" value="pack://application:,,,/MarvelFlow.App;component/Component/Teaser/" />
+    <add key="TeaserPath" value="C:\Users\AM\Documents\GIT\marvelflow\src\MarvelFlow\MarvelFlow.App\Component\Teaser\" />
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
