--- a/src/MarvelFlow/MarvelFlow.Service/MarvelFlow.Service.csproj
+++ b/src/MarvelFlow/MarvelFlow.Service/MarvelFlow.Service.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Factory\FilmFactory.cs" />
     <Compile Include="ManagerJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DBLocal\Film.json" />
